# ServerVoiceS3R

./: .env.example  .gitignore  Cargo.toml  README.md  build.bat  build.ps1  diag_rate.py  stt_server.py
src/: main.rs
